--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=7b10a778e0918e48e9a8",
     "/css/app.css": "/css/app.css?id=f4d8b4dcea3280933ba3",
-    "/admin/css/lib.css": "/admin/css/lib.css?id=a1fefcccaf76768d51a0",
-    "/admin/js/lib.js": "/admin/js/lib.js?id=9041d688b026568cea2b",
-    "/admin/js/data-table.js": "/admin/js/data-table.js?id=98fb933ed554e086260a"
+    "/admin/css/lib.css": "/admin/css/lib.css?id=a0e2a717b0f81dd761d0",
+    "/admin/js/lib.js": "/admin/js/lib.js?id=abbe0a9b10893d2eb0e8"
 }
