import file manager

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/js/app.js": "/js/app.js?id=c2f870996248a1e0fb7c",
+    "/js/app.js": "/js/app.js?id=57d900745b778137dd3e",
     "/css/app.css": "/css/app.css?id=f4d8b4dcea3280933ba3",
-    "/admin/css/lib.css": "/admin/css/lib.css?id=a0e2a717b0f81dd761d0",
-    "/admin/js/lib.js": "/admin/js/lib.js?id=c3a60d1c21834a4359ef"
+    "/admin/css/lib.css": "/admin/css/lib.css?id=8135ad7de29c7b0e6496",
+    "/admin/js/lib.js": "/admin/js/lib.js?id=881a7abf65e88a2a6eda",
+    "/admin/js/jquery.min.js": "/admin/js/jquery.min.js?id=6407e5047d51c05aff02"
 }
