--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=f8e66931f2c0d0657c13",
+    "/js/app.js": "/js/app.js?id=d62e48860acd14215741",
     "/css/app.css": "/css/app.css?id=f4d8b4dcea3280933ba3",
+    "/koza/css/lib.css": "/koza/css/lib.css?id=e9f3201a036efd8c5c0c",
+    "/koza/js/lib.js": "/koza/js/lib.js?id=dce61a8140487453a7d8",
     "/admin/css/lib.css": "/admin/css/lib.css?id=9534fa3ed252a3fedca8",
-    "/admin/js/lib.js": "/admin/js/lib.js?id=d33b2bb8d46384ccfd7a",
+    "/admin/js/lib.js": "/admin/js/lib.js?id=526020eda9dcd08444e3",
     "/admin/js/jquery.min.js": "/admin/js/jquery.min.js?id=6407e5047d51c05aff02"
 }
